@@ -1,4 +1,5 @@
 0.02_5
+    - temporarily work around JSON::Any fault on HTTP status 500
     - No logging by default; config option log_level for noise
     - Renamed twitirc.pl to twirc
     - Added check_replies and @replies merging
